# MM-Detect

./: .env.example  .gitignore  README.md  environment.yml  main.py  pyproject.toml  requirements.txt
mm_detect/: __init__.py  base_contamination_checker.py  model_contamination_checker.py
mm_detect/LLaVA/llava/: __init__.py  mm_utils.py  utils.py
mm_detect/VILA/: environment_setup.sh
mm_detect/VILA/llava/: entry.py  mm_utils.py
mm_detect/VILA/llava/model/: builder.py
mm_detect/VILA/llava/model/multimodal_encoder/: clip_encoder.py  radio_encoder.py
mm_detect/VILA/llava/model/multimodal_encoder/intern/: modeling_intern_vit.py
mm_detect/VILA/llava/utils/: utils.py
mm_detect/Yi/VL/llava/: mm_utils.py
mm_detect/Yi/VL/llava/model/: llava_arch.py
mm_detect/configs/: config.py  main_config.yaml
mm_detect/mllms/: deepseek_vl2.py  gpt.py  llava.py  vila.py  yi_vl.py
mm_detect/mllms/pretrained_llms/: deepseek_moe.py
mm_detect/utils/: __init__.py  config.py  dataset_utils.py  resume_manager.py
multimodal_methods/: option_order_sensitivity_test.py  slot_guessing_for_perturbation_caption.py
pretrain_detect/: pretrain_detect.py
scripts/llms/detect_pretrain/: test_MMStar.sh
scripts/mllms/option_order_sensitivity_test/: test_MMStar.sh  test_ScienceQA.sh
scripts/mllms/slot_guessing_for_perturbation_caption/: test_COCO.sh  test_NoCaps.sh  test_vintage.sh
